<resources>
    <string name="app_name">Boop</string>
    <string name="title_activity_boop_map">Boop!</string>

    #LoginGoogle
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="credencialesOAuth20">587628810585-0oqejh5oo0f9461t7v99498pi96ltl4k.apps.googleusercontent.com</string>

    #Register
    <string name="nombre">Nombre</string>
    <string name="EscribeNombre">Podrás asignar nombre de usuario en Perfil</string>
    <string name="correo">E-mail</string>
    <string name="EscribeCorreo">Escribe aquí tu correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Validar Contraseña</string>
    <string name="EscribeContrasena">****</string>
    <string name="AceptarRegistro">Registrate</string>
    <string name="CancelarRegistro">Cancelar</string>
    <string name="CondicionesUso">Ver politica y condiciones de uso\n</string>
    <string name="intro">\n¡Bienvenido a Boop! Para completar el proceso de registro cubra todos los campos de texto. A continuación en tu perfil podrás seleccionar una foto y poner una breve descripción sobre tu persona.\n</string>
    <string name="CorreoNoValido">Correo electrónico no válido</string>
    <string name="ContrasenaFallida">No coenciden las contraseñas</string>
    <string name="ComprobarDatos">Comprueba que el correo sea válido y las contraseñas coencidan</string>
    <string name="ContrasenaCorta">Contraseña demasiado corta</string>
    <string name="ContrasenaVacia">La contraseña no puede estar vacía</string>

    <string name="nombreRealCompleto">Nombre real, completo</string>
    <string name="bio">Háblanos de ti</string>
    <string name="bio2">¿Quién eres?</string>
    <string name="fechaNac">Fecha de nacimiento</string>

    #VerBoop
    <string name="creador">Creado por:</string>
    <string name="descripcion">Descripción:</string>
    <string name="popularidad">\nPopularidad de usuario:</string>
    <string name="nombreBoop">Nombre de BooP:</string>
    <string name="clasificacion">Tipo de evento: </string>
    <string name="asistir">Voy a ir</string>
    <string name="noAsistir">No voy a ir</string>
    <string name="dejarDeVer">Salir</string>
    <string name="puntuacion">\nValora este Boop:</string>
    <string name="botonChat">Sala de chat</string>
    <string name="empieza">Empieza:</string>
    <string name="acaba">Termina:</string>
    <string name="asistentes">Asistirán:</string>
    <string name="maxAsistentes">Aforo máximo:</string>
    <string name="alcanzadoMaximo">Alcanzado el máximo de Boopers</string>

    #VerPerfil
    <string name="sobremi">Sobre mi...:</string>
    <string name="salir">Salir</string>
    <string name="anyos">años</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="radio">Área de descubrimiento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    #Condiciones de Uso
    <string name="condiciones">Lea las condiciones de Uso: \n Restringido a paletos.</string>

</resources>
