<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cya.boop.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correoView"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:hint="@string/EscribeCorreo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/mail"
            android:hint="@string/EscribeCorreo"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passView"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:hint="@string/EscribeContrasena"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passView2"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/pass2"
            android:textSize="14sp"
            android:hint="@string/EscribeContrasena"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IntroView"
            android:text="@string/intro"
            android:textSize="18sp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/CondicionesUso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/useConditions"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/CancelarRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cancel"
                android:layout_weight="0.5"
                android:background="@android:color/holo_red_dark" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/accept"
                android:layout_weight="0.5"
                android:text="@string/AceptarRegistro"
                android:backgroundTint="@android:color/holo_green_light" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
