<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.cya.boop.CrearPerfil">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/user_image_set"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#0fff"
            app:srcCompat="@drawable/ic_face_black_24dp" />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <EditText
                android:background="@drawable/interactuable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textPersonName"
                android:ems="10"
                android:id="@+id/CPnombre"
                android:hint="@string/nombreRealCompleto" />
        </LinearLayout>
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <EditText
                android:background="@drawable/interactuable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/CPbio"
                android:hint="@string/bio" />

        </LinearLayout>
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CPfechaNacText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.29"
                android:text="@string/fechaNac" />

            <Button
                android:id="@+id/CPfechaNac"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/interactuable" />

        </LinearLayout>
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:background="@drawable/primary_button"
                android:text="Crear mi perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CPconfirm"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
