<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ver_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cya.boop.verPerfil">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/VPnombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:text="@string/sobremi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" />

            <TextView
                android:text="biografía"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/VPbio"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/VPedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="numerico"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/anyos"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/VPlogout"
                android:elevation="0dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
